Package: R.matlab
=================

Version: 1.7.0 [2013-04-15]
o readMat() now support reading 64-bit integers [array type (class)
  'mxINT64_CLASS' and 'mxUINT64_CLASS'] on machines/versions of R
  with .Machine$sizeof.long >= 8 or .Machine$sizeof.longlong >= 8.
o ROBUSTNESS: Now nearly all S3 methods are declared properly in
  the namespace.


Version: 1.6.4 [2013-03-08]
o Added an Authors@R field to the DESCRIPTION.
o DOCUMENTATION: Updated the help usage section for all static methods.


Version: 1.6.3 [2013-01-17]
o Bumped package dependencies.


Version: 1.6.2 [2012-12-02]
o CLEANUP: R CMD check no longer warns on global assignments.
o Bumped package dependencies.


Version: 1.6.1 [2012-06-30]
o Updated package dependencies.


Version: 1.6.0 [2012-06-07]
o BUG FIX: readMat() could not read sparse matrices containing logical
  values, only numerics.  This was because the 'logical' bit in the
  Array Flags was not utilized by readMat(), which in turn was because
  the file format documentation is rather vague on how to use that bit.
  This means that readMat() now represents sparse logical matrices
  using logical values, except when sparseMatrixClass="SparseM",
  because SparseM matrices can only hold numeric values.
  Thanks to Irtisha Sinhg at Cornell University for reporting on this.


Version: 1.5.9 [2012-05-05]
o Now readMat() decompression error messages are more informative.
o Now it is possible to specify the decompression method for readMat().


Version: 1.5.8 [2012-04-16]
o Package now only *imports* R.methodsS3.


Version: 1.5.7 [2012-04-13]
o The 'Rcompression' update in v1.5.5 introduced a bug, causing
  the loading of that package to fail.


Version: 1.5.6 [2012-04-02]
o BUG FIX: readMat(..., verbose=-111) would give an error on object
  'zraw' not being found.


Version: 1.5.5 [2012-04-01]
o ROBUSTNESS: Move most of the test code that was in the examples
  of readMat() and writeMat() to formal system tests of the package,